--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@react-navigation/stack": "^6.2.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-childprocess": "^0.1.4",
     "react-native-safe-area-context": "^4.2.5",
+    "react-native-toast-message": "^2.1.5",
     "react-native-toast-notifications": "^3.2.3",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-windows": "0.68.3"
   },
   "devDependencies": {
